[gd_scene load_steps=19 format=3 uid="uid://b6lpsu2tw7r46"]

[ext_resource type="Texture2D" uid="uid://cu48qh4ctofaq" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_87845"]
[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_qr2oy"]
[ext_resource type="Texture2D" uid="uid://bx1xa65vtyixf" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_18nd8"]
[ext_resource type="AudioStream" uid="uid://w26jq3dbvlud" path="res://soundFX/morte.wav" id="4_goj36"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouyn3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d22kw"]
texture = ExtResource("1_87845")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_m1vdl"]
font_names = PackedStringArray("JetBrains Mono")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_06gpx"]
font = SubResource("SystemFont_m1vdl")
font_size = 42
font_color = Color(0.298039, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_hypee"]

[sub_resource type="SystemFont" id="SystemFont_wpbue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vdhm"]
texture = ExtResource("2_18nd8")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_7d3lq"]
font_names = PackedStringArray("JetBrains Mono")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_vsaeo"]
font = SubResource("SystemFont_7d3lq")
font_size = 28
font_color = Color(0, 0, 0, 0.815686)

[sub_resource type="SystemFont" id="SystemFont_okfcw"]

[sub_resource type="LabelSettings" id="LabelSettings_d7odb"]
font = SubResource("SystemFont_okfcw")
font_size = 28
font_color = Color(0, 0, 0, 0.815686)

[sub_resource type="Animation" id="Animation_lcw7q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.658824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(377, 21)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 402)]
}

[sub_resource type="Animation" id="Animation_y518m"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.815686)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.378929, 1),
"update": 0,
"values": [Vector2(377, -116), Vector2(377, 54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 2),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(300, 688), Vector2(300, 402)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_moeaf"]
_data = {
"RESET": SubResource("Animation_lcw7q"),
"default": SubResource("Animation_y518m")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_qr2oy")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouyn3")

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -5.0
offset_right = -11.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.658824)

[node name="TopPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 377.0
offset_top = 21.0
offset_right = 775.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d22kw")

[node name="GameOverLabel" type="Label" parent="Panel/TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -43.0
offset_right = 128.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_06gpx")

[node name="CenterPanel" type="Panel" parent="Panel"]
self_modulate = Color(0.984314, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -105.0
offset_right = 104.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Panel/CenterPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_right = 62.0
offset_bottom = 48.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_hypee")
theme_override_font_sizes/font_size = 25
text = "START"
flat = true

[node name="ExitButton" type="Button" parent="Panel/CenterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -51.0
offset_right = 65.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = SubResource("SystemFont_wpbue")
theme_override_font_sizes/font_size = 25
text = "EXIT"
flat = true

[node name="BottomPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 402.0
offset_right = 845.0
offset_bottom = 658.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_7vdhm")

[node name="CenterContainer" type="CenterContainer" parent="Panel/BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.559
anchor_top = -2.544
anchor_right = -0.559
anchor_bottom = -2.544
offset_left = 421.568
offset_top = 727.176
offset_right = 747.568
offset_bottom = 793.176
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="Label" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_vsaeo")

[node name="TimeLabel" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:59"
label_settings = SubResource("LabelSettings_vsaeo")

[node name="Label2" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_vsaeo")

[node name="MonstersLabel" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1234"
label_settings = SubResource("LabelSettings_d7odb")

[node name="Label3" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Gold Coins Collected:"
label_settings = SubResource("LabelSettings_vsaeo")

[node name="GoldLabel" type="Label" parent="Panel/BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10.000"
label_settings = SubResource("LabelSettings_d7odb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_moeaf")
}
autoplay = "default"

[node name="mortesom" type="AudioStreamPlayer2D" parent="Panel"]
stream = ExtResource("4_goj36")
volume_db = 5.714
autoplay = true
bus = &"soundFX"

[connection signal="button_down" from="Panel/CenterPanel/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="Panel/CenterPanel/ExitButton" to="." method="_on_exit_button_button_down"]
